# sfeMovie

./: .editorconfig  .gitignore  BUILD.txt  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  launch.vs.json
example/: SFMLMoviePlayer.cpp  video.txt
src/sfeMovie/: AVFunc.cpp  AVFunc.hpp
